kubernetes/apps/development/excalidraw/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://excalidraw.default.internal.javiersant.com"
    gethomepage.dev/description: Handy tools for developments
    gethomepage.dev/group: Tools
    gethomepage.dev/icon: excalidraw.svg
    gethomepage.dev/name: Excalidraw
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 196
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`excalidraw.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: excalidraw
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
